force-app/main/default/objects/Contacto__c/Contacto__c.object-meta.xml
<CustomObject>
    <label>Contacto</label>
    <nameField>
        <label>Contacto Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contactos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>