force-app/main/default/objects/Contacto__c/fields/Correo__c.field-meta.xml
<CustomField>
    <fullName>Correo__c</fullName>
    <description>pon tu correo</description>
    <label>Correo</label>
    <required>true</required>
    <type>Email</type>
</CustomField>