force-app/main/default/objects/Contacto__c/fields/FechaCumple__c.field-meta.xml
<CustomField>
    <fullName>FechaCumple__c</fullName>
    <label>Fechacumple</label>
    <type>Date</type>
</CustomField>