force-app/main/default/objects/Contacto__c/validationRules/Datos_de_contacto.validationRule-meta.xml
<ValidationRule>
    <fullName>Datos_de_contacto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK(  $ObjectType.Contacto__c.Fields.Correo__c  ),
  ISBLANK( CreatedBy.Phone )
)</errorConditionFormula>
    <errorMessage>Debe informar al menos un dato de contacto: correo electrónico o teléfono.</errorMessage>
</ValidationRule>